--- a/view/shared/layout.html
+++ b/view/shared/layout.html
@@ -2,10 +2,10 @@
     <head>
         <title>{{.Title}}</title>
         {{range $i, $file := .StyleSheets}}
-            <link rel="stylesheet" type="text/css" href="/css/{{$file}}" media="screen" />
+            <link rel="stylesheet" type="text/css" href="{{$file}}" media="screen" />
         {{end}}
         {{range $i, $file := .Scripts}}
-            <script type="text/javascript" src="/js/{{$file}}"></script>
+            <script type="text/javascript" src="{{$file}}"></script>
         {{end}}
     </head>
     <body>
