Added static files handling for css, js, and favicon. Still needs generic images.

--- a/view/shared/layout.html
+++ b/view/shared/layout.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>{{.Title}}</title>
+        <link rel="icon" type="image/x-icon" href="/favicon.ico" />
         {{range $i, $file := .StyleSheets}}
             <link rel="stylesheet" type="text/css" href="{{$file}}" media="screen" />
         {{end}}
