Doing some layout & styling work for main page.

--- a/view/root/index.html
+++ b/view/root/index.html
@@ -1,3 +1,13 @@
-<div class="mainPage">
-    We are the body content for the root page. {{.Title}} {{.Body}} {{.Data}}
+<div class="jumbotron">
+    This be jumbotron content
+</div>
+<div class="quotes">
+    <div>
+        <p>Do or do not there is no try.</p>
+        -Yoda
+    </div>
+    <div>
+        <p>Talga Vassternich 'Deserve Victory'</p>
+        -Wizard's Eight Rule, Sword of Truth
+    </div>
 </div>
