--- a/media/css/main.css
+++ b/media/css/main.css
@@ -1,4 +1,99 @@
+* {
+    box-sizing: border-box;
+}
+
+html {
+    height: 100%;
+}
+
 body {
-    margin: 0;
-    padding: 0;
+    min-height: 100%;
+    font-size: 15px;
+    line-height: 1.42857;
+    font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
+
+    padding: 1rem;
+    background-color: #222222;
+    color: #FFFFFF;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: stretch;
+}
+
+a,
+a:hover,
+a:focus {
+    color: #0CE3AC;
+}
+
+a {
+    text-decoration: none;
+}
+
+a:hover,
+a:focus {
+    text-decoration: underline;
+}
+
+.siteHeader {
+    padding: 1rem;
+    background-color: #375A7F;
+    font-size: 2em;
+
+    /*Rounded Corners*/
+    border-width: 0;
+    border-radius: 4px;
+    border-color: transparent;
+
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.siteHeader a {
+    color: #FFFFFF;
+    padding: 1em;
+    margin: -1em 0 -1em  0;
+}
+
+.superCase {
+    text-transform: uppercase;
+    font-size: 0.5em
+}
+
+.superCase::first-letter {
+    font-size: 2em;
+}
+
+.siteBrand {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.siteBrand .superCase {
+    width: 6em;
+}
+
+.siteHeader a:hover,
+.siteHeader a:focus {
+    color: #0CE3AC;
+    text-decoration: none;
+}
+
+.siteNavigation {
+    display: flex;
+    align-items: center;
+    font-size: 0.75em;
+}
+
+.siteFooter {
+    padding-top: 1rem;
+    border-top: 1px solid #303030;
+}
+
+.siteBody {
+    padding: 1rem;
+    flex: 1;
 }
