--- a/view/shared/layout.html
+++ b/view/shared/layout.html
@@ -10,20 +10,19 @@
         {{end}}
     </head>
     <body>
-        <header>
-            Andrew Bowers
-            <nav>
-                <ul>
-                    <!--<li><a href="/work">Work</a></li>-->
-                    <!--<li>Play</li>-->
-                    <li><a href="/blog">Blog</a></li>
-                </ul>
+        <header class="siteHeader">
+            <a href="/" class="siteBrand"><span class="superCase">Andrew</span><span class="superCase">Bowers</span></a>
+            <nav class="siteNavigation">
+                <a class="superCase" href="/">Home</a>
+                <a class="superCase" href="/work">Work</a>
+                <a class="superCase" href="/play">Play</a>
+                <a class="superCase" href="/blog">Blog</a>
             </nav>
         </header>
-        <div>
+        <div class="siteBody">
             {{.Body}}
         </div>
-        <footer>
+        <footer class="siteFooter">
             <p>&copy; 2014-2015 Andrew Bowers</p>
             <p>Code for and embedded in this website is released under the <a href="http://ender.mit-license.org">MIT license</a> except where otherwise noted.</p>
         </footer>
