--- a/view/shared/layout.html
+++ b/view/shared/layout.html
@@ -14,8 +14,8 @@
             <a href="/" class="siteBrand"><span class="superCase">Andrew</span><span class="superCase">Bowers</span></a>
             <nav class="siteNavigation">
                 <a class="superCase" href="/">Home</a>
-                <a class="superCase" href="/work">Work</a>
-                <a class="superCase" href="/play">Play</a>
+                <!--<a class="superCase" href="/work">Work</a>-->
+                <!--<a class="superCase" href="/play">Play</a>-->
                 <a class="superCase" href="/blog">Blog</a>
             </nav>
         </header>
