--- a/media/css/blog.css
+++ b/media/css/blog.css
@@ -25,4 +25,8 @@
 
 a.blogPost {
     display: block;
+    max-width: 15rem;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
