--- a/media/css/blog.css
+++ b/media/css/blog.css
@@ -31,25 +31,6 @@ a.blogPost {
     text-overflow: ellipsis;
 }
 
-.blogYears {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.blogYears > .blogYear {
-    padding: 2em;
-    margin: 1em;
-
-    /*Rounded Borders*/
-    border-width: 0;
-    border-radius: 4px;
-    border-color: transparent;
-}
-
-.blogYears > .blogYear:nth-child(even) {
-    background-color: blue;
-}
-
-.blogYears > .blogYear:nth-child(odd) {
-    background-color: green;
+.blogHeader h1 {
+    font-size: 1.5em;
 }
