Added Vimeo support to VideoPost and updated month.html with an appropriate warning when there are no blog posts.

--- a/view/blog/month.html
+++ b/view/blog/month.html
@@ -1,4 +1,10 @@
 <h1>{{.Data.Month}} {{.Data.Year}}</h1>
-{{range $i, $post := .Data.Posts}}
-    <a href="/blog/{{$post.Date.Year}}/{{$post.Date.Month | MonthAsInt}}/{{$post.UUID}}" class="blogPost">{{$post.Title}}</a>
+{{if .Data.IsValid}}
+    {{range $i, $post := .Data.Posts}}
+        <a href="/blog/{{$post.Date.Year}}/{{$post.Date.Month | MonthAsInt}}/{{$post.UUID}}" class="blogPost">{{$post.Title}}</a>
+    {{end}}
+{{else}}
+    <div class="warning">
+        Sorry, there are no posts for this month.
+    </div>
 {{end}}
